# cosc345

./: .gitignore  CMakeLists.txt  Casino.cpp  Casino.h  README.md  assignment1.md  build.sh  report.md  test.sh
.github/workflows/: cmake.yml  codecov.yaml  doxygen.yml  msvc.yml
assets/: 100years.css  100years.html  100years.js  100yearsB4graph.html  100yearsSimplegraph.html  app.html  home-page.css  homepage.css  homepage.html  homepage.js  infinite-page.css  infinite.css  infinite.html  infinite.js  portfolio.css  portfolio.html  portfolio.js  secondHomepage.css  secondHomepage.html  secondHomepage.js
assets/data/stocks/: AAPL.csv  ABBV.csv  ABT.csv  ACN.csv  ADBE.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  ASML.csv  AVGO.csv  AXP.csv  BA.csv  BABA.csv  BAC.csv  BCS.csv  BHP.csv  BKNG.csv  BMY.csv  BP.csv  CAT.csv  CMCSA.csv  COP.csv  COST.csv  CRM.csv  CSCO.csv  CVX.csv  DE.csv  DHR.csv  DIS.csv  GE.csv  GOOG.csv  (+68 more)
documents/: assignment1.md  retrospective.md
src/: Calendar.cpp  Calendar.h  Casino.cpp  Casino.h  CasinoTester.cpp  CasinoTester.h  College.cpp  College.h  Doxyfile  GameFunctions.cpp  GameFunctions.h  Headline.cpp  Headline.h  MyApp.cpp  MyApp.h  PathUtil.cpp  PathUtil.h  Portfolio.cpp  Portfolio.h  PortfolioTester.cpp  PortfolioTester.h  Purchase.cpp  Purchase.h  Stock.cpp  Stock.h  casino_tester.cpp  history.cpp  history.h  main.cpp  newsGenerator.cpp  newsGenerator.h  purchase.cpp  purchase.h  runTests.sh  stock.cpp  stock.h  stockApp  stockTest.sh  testCasino.sh  testHeadlines.cpp  (+4 more)
src/data/: financial_news.csv  funny_news.csv  headlines.csv  nasdaq.csv  nasdaq_screener_filtered.csv  rare_news.csv  tech_news.csv
src/src/: NASDAQ.csv  download_stocks.cpp  stock.cpp
(+6980 files in other folders)
